@@ -1,7 +1,4 @@
 #!/sbin/runscript
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
 #
 # Init file for OpenSCADA system demon.
 #
