@@ -10,13 +10,11 @@
 # Description: Start OpenSCADA
 ### END INIT INFO
 
-PATH=/sbin:/usr/sbin:/bin:/usr/bin
 DESC="openscada"
 NAME=openscada
 DAEMON=/usr/bin/$NAME
 DAEMON_ARGS="--demon"
 PIDFILE=/var/run/$NAME.pid
-SCRIPTNAME=/etc/init.d/$NAME
 
 # Exit if the package is not installed
 [ -x "$DAEMON" ] || exit 0
@@ -34,21 +32,13 @@ SCRIPTNAME=/etc/init.d/$NAME
 #
 do_start()
 {
-	export LANG=en_US.UTF-8
-	export LANGUAGE=en_US.UTF-8
-	# Return
-	#   0 if daemon has been started
-	#   1 if daemon was already running
-	#   2 if daemon could not be started
-	start-stop-daemon --start --make-pidfile --pidfile $PIDFILE --exec $DAEMON --test > /dev/null \
-		|| return 1
-	start-stop-daemon --start --make-pidfile --pidfile $PIDFILE --exec $DAEMON -- \
-		$DAEMON_ARGS \
-		|| return 2
-	pidproc=$(pidof $NAME)
-	if [ $pidproc ]; then
-	echo "$pidproc" > $PIDFILE
-	fi
+    export LANG=en_US.UTF-8
+    export LANGUAGE=en_US.UTF-8
+    start-stop-daemon --start --oknodo --exec $DAEMON -- $DAEMON_ARGS
+    RETVAL=$?
+    pidproc=$(pidof $NAME)
+    if [ $pidproc ]; then echo "$pidproc" > $PIDFILE; fi
+    return $RETVAL
 }
 
 #
@@ -56,40 +46,34 @@ do_start()
 #
 do_stop()
 {
-	# Return
-	#   0 if daemon has been stopped
-	#   1 if daemon was already stopped
-	#   2 if daemon could not be stopped
-	#   other if a failure occurred
-	start-stop-daemon --stop --retry=TERM/30/KILL/5 --pidfile $PIDFILE --name $NAME
-	RETVAL="$?"
-	if [ "$RETVAL" -ne 0 ]; then
-	start-stop-daemon --stop --oknodo --retry=0/30/KILL/5 --exec $DAEMON
-	RETVAL="$?"
-	fi
-	rm -f $PIDFILE
-	return "$RETVAL"
+    start-stop-daemon --stop --oknodo --retry=TERM/30/KILL/5 --pidfile $PIDFILE --name $NAME
+    RETVAL=$?
+    rm -f $PIDFILE
+    return $RETVAL
 }
 
 case "$1" in
-  start)
+    start)
 	log_daemon_msg "Starting $DESC"
 	do_start
+	log_end_msg $?
 	;;
-  stop)
+    stop)
 	log_daemon_msg "Stopping $DESC"
 	do_stop
+	log_end_msg $?
 	;;
-  status)
-       status_of_proc "$DAEMON" "$NAME" && exit 0 || exit $?
-       ;;
-  restart|reload|force-reload)
+    status)
+	status_of_proc "$DAEMON" "$NAME" && exit 0 || exit $?
+	;;
+    restart|reload|force-reload)
 	log_daemon_msg "Restarting $DESC"
 	do_stop
 	do_start
+	log_end_msg $?
 	;;
-  *)
-	echo "Usage: $SCRIPTNAME {start|stop|status|restart|force-reload}"
+    *)
+	echo "Usage: $0 {start|stop|status|restart|force-reload}"
 	exit 3
 	;;
 esac
