@@ -1,3 +1,10 @@
+2015-03-19 Roman
+- SYS: Configure template AX_LIB_FIREBIRD some adapted for cinfigure and build FireBird with headers into */include/firebird, like SuSE.
+- Init script for RH expanded by argument -d 30 for stop and wait to correct finish.
+- Init script for Debian some simplified, will further test.
+- FIX:QTStarter: Some original text messages fixed.
+
+
 2015-03-18 Roman
 - SYS: The main start script openscada_start improved for using config file "oscada.xml" into the project work directory.
     Init script for ALTLinux expanded by argument "--retry TERM/30/KILL/5" for stop and wait to correct finish.
